<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/empty_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textAlignment="textEnd"
        android:maxLines="1"
        android:text="Empty Result"
        android:layout_marginTop="@dimen/comm_gap_5"
        android:layout_marginBottom="@dimen/comm_gap_5"
        android:layout_marginLeft="@dimen/comm_gap_5"
        android:layout_marginRight="@dimen/comm_gap_5"
        android:textColor="@color/text_black"
        android:textSize="@dimen/comm_gap_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="end" />

    <Button
        android:id="@+id/btReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reload" />


</LinearLayout>