<?xml version="1.0" encoding="utf-8"?>
<com.aspsine.swipetoloadlayout.SwipeToLoadLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeToLoadLayout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    app:swipe_style="blew">

    <include
        android:id="@+id/swipe_refresh_header"
        layout="@layout/refresh_swap_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/swipe_target"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:scrollbars="none" />

    <com.template.android.widget.swap.GlobalLoadMoreFooterView
        android:id="@+id/swipe_load_more_footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center" />

</com.aspsine.swipetoloadlayout.SwipeToLoadLayout>