<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title=""
        app:showAsAction="ifRoom" />


</menu>
